--- a/module/css/systems/pf2e.css
+++ b/module/css/systems/pf2e.css
@@ -334,9 +334,6 @@
     border: 1px solid var(--color-border-light-2);
 }
 
-#chat-controls .control-buttons {
-    color:rgba(255, 255, 245, 0.8);
-}
 .message-content .chat-damage-buttons button>img {
     filter: invert(75%);
 }
